--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,18 +5,88 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post">
-    <label for="name"><b>Institution Name</b></label>
-    <input type="text" placeholder="Enter Institution Name" name="name" id="name" required/>
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" id="email" required/>
-    <p>
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="password" id="psw" required/>
-        <input type="password" placeholder="Confirm Password" name="password2" id="psw2" required/>
-        <button id="reg_btn" type="f">Register</button>
-    <p>Already have an account? <a href="/admin_login">Log In</a>.</p>
-</form>
+<div class="header">
+    <h2 class="logo">Teacherbook</h2>
+</div>
+<div class="u_form HcenterContainer">
+    <h2 style="color: black; font-weight: bold; font-size: 35px;">Registration</h2>
+    <form method="post">
+        <label class="form_el" for="name"><b>Institution Name</b></label>
+        <br>
+        <input class="form_el" type="text" placeholder="Enter Institution Name" name="name" id="name" required/>
+        <br>
+        <label class="form_el" for="email"><b>Email</b></label>
+        <br>
+        <input class="form_el" type="text" placeholder="Enter Email" name="email" id="email" required/>
+        <br>
+        <label class="form_el" for="psw"><b>Password</b></label>
+        <br>
+        <input class="form_el" type="password" placeholder="Enter Password" name="password" id="psw" required/>
+        <br>
+        <input class="form_el" type="password" placeholder="Confirm Password" name="password2" id="psw2" required/>
+        <br>
+        <div class="HcenterContainer">
+            <button id="reg_btn" type="f">Register</button>
+        </div>
+    </form>
+    <div class="HcenterContainer">
+        <p>Already have an account? <a href="/admin_login">Log In</a>.</p>
+    </div>
+</div>
+<style>
+    .header {
+        overflow: hidden;
+        background-color: #70ca86;
+        padding: 20px 10px;
+        border-radius: 20px;
+    }
+
+    .logo {
+        color: aliceblue;
+        font-size: 45px;
+        font-weight: bold;
+        vertical-align: bottom;
+        display: inline;
+        margin-left: 30px;
+    }
+    .u_form {
+        width: fit-content;
+        background-color: beige;
+        padding: 5px 20px 5px 20px;
+        border-radius: 40px;
+    }
+
+    .HcenterContainer {
+        width: fit-content;
+        margin: 20px auto auto auto;
+    }
+
+    .form_el {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    input[type=text], input[type=password] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+</style>
 <!--<script>
     var emailIsValid = false;
     var passIsValid = false;
