--- a/src/main/resources/templates/group_view.html
+++ b/src/main/resources/templates/group_view.html
@@ -5,23 +5,28 @@
     <title>Group View</title>
 </head>
 <body>
-<div id="header">
-    <a class="btn" href="../../admin_home">Home</a>
-    <a class="btn" href="/logout" style="float: right">Log out</a>
-</div>
-<h2 th:text="${group.name}"></h2>
-<div>
-    <button onclick="rename(this)">Rename Group</button>
-    <button onclick="delete_confirm()">Delete Group</button>
-</div>
-<div>
-    <div th:each="student: ${group.students}">
-        <a th:href="@{../../members/student/{id}(id=${student.student_id})}" th:text="${student.fullname}"></a>
-        <a th:href="@{./remove_student/{id}(id=${student.student_id})}">X</a>
+<div class="header">
+    <h2 class="logo">Teacherbook</h2>
+    <div class="header-right">
+        <a class="btn" href="../../admin_home">Home</a>
+        <a class="btn" href="/logout">Log out</a>
     </div>
 </div>
-<p>Add students to this group:</p>
+<h2 style="color: black; font-weight: bold; font-size: 35px; padding-left: 10px;">Group Information</h2>
+<h3 style="color: black; font-weight: bold; font-size: 25px; padding-left: 10px;" th:text="${group.name}"></h3>
+<div>
+    <button onclick="rename(this)">Rename Group</button>
+    <button class="redbtn" onclick="delete_confirm()">Delete Group</button>
+</div>
+<div>
+    <h3 style="color: black; font-weight: bold; font-size: 25px; padding-left: 10px;">Members:</h3>
+    <div class="student" th:each="student: ${group.students}">
+        <a th:href="@{../../members/student/{id}/student_info(id=${student.student_id})}" th:text="${student.fullname}"></a>
+        <a style="background-color: #AF554C; color: white;" th:href="@{./remove_student/{id}(id=${student.student_id})}">X</a>
+    </div>
+</div>
 <form method="post" autocomplete="off">
+    <p style="padding: 0px 10px; font-weight: bold">Add students to this group:</p>
     <div class="autocomplete" style="width:300px;" id="stud">
         <input id="studentInput" type="text" name="student_search" placeholder="Search students">
     </div>
@@ -30,7 +35,7 @@
 <script th:inline="javascript">
 
     function rename(e) {
-        e.hidden = true;
+        e.style.display = "none";
         var f = document.createElement("FORM");
         f.setAttribute("method", "post");
         f.setAttribute("action", "./rename");
@@ -75,9 +80,12 @@
                     b.innerHTML = "<strong>" + arr_names[i].substr(0, val.length) + "</strong>";
                     b.innerHTML += arr_names[i].substr(val.length);
                     b.innerHTML += "<input type='hidden' name='students' value='" + arr_val[i] + "'>";
+                    b.classList.add("student_to_add");
                     b.addEventListener("click", function(e) {
                         this.innerHTML = this.innerHTML.replace("<strong>", "");
                         this.innerHTML = this.innerHTML.replace("</strong>", "");
+                        this.classList.remove("student_to_add");
+                        this.classList.add("student_added");
                         var list = document.getElementById("stud")
                         list.insertBefore(this, list.firstChild);
                         closeAllLists();
@@ -133,5 +141,118 @@
     var studentvalues = [[${studentvalues}]];
     autocomplete(document.getElementById("studentInput"), studentnames, studentvalues);
 </script>
+<style>
+    .header {
+        overflow: hidden;
+        background-color: #70ca86;
+        padding: 20px 10px;
+        border-radius: 20px;
+    }
+
+    .header a {
+        float: left;
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+    }
+
+    .logo {
+        color: aliceblue;
+        font-size: 45px;
+        font-weight: bold;
+        vertical-align: bottom;
+        display: inline;
+        margin-left: 30px;
+    }
+    .header a:hover {
+        background-color: #c1f1a4;
+        color: black;
+    }
+
+    .header-right {
+        float: right;
+    }
+
+    @media screen and (max-width: 500px) {
+        .header a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+        .header-right {
+            float: none;
+        }
+    }
+
+    input[type=text], input[type=password] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+
+    .student_added {
+        width: fit-content;
+        background-color: #c1f1a4;
+        padding: 10px;
+        margin: 10px;
+    }
+
+    .student_to_add {
+        width: fit-content;
+        background-color: #f2de9f;
+        padding: 10px;
+        margin: 10px;
+    }
+
+    form {
+        padding: 15px;
+        background-color: beige;
+    }
+
+    label {
+        font-weight: bold;
+    }
+
+    .redbtn {
+        background-color: #AF554C;
+        color: white;
+        text-decoration: none;
+    }
+
+    .student a {
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+        background-color: beige;
+    }
+
+    .student {
+        padding: 10px;
+        margin: 10px;
+    }
+</style>
 </body>
 </html>
