--- a/src/main/resources/templates/manage_students.html
+++ b/src/main/resources/templates/manage_students.html
@@ -5,33 +5,38 @@
     <title>Manage Students</title>
 </head>
 <body>
-<div id="header">
-    <a class="btn" href="../admin_home">Home</a>
-    <a class="btn" href="/logout" style="float: right">Log out</a>
-</div>
-<div class = students_container>
-    <input id="studentInput" type="text" name="student_search" placeholder="Search student">
-    <div class = students th:each="student: ${students}">
-        <a th:href="@{./student/{id}/student_info(id=${student.student_id})}" th:text="${student.fullname}" th:id="${student.student_id}"><br></a>
+<div class="header">
+    <h2 class="logo">Teacherbook</h2>
+    <div class="header-right">
+        <a class="btn" href="../admin_home">Home</a>
+        <a class="btn" href="/logout">Log out</a>
     </div>
 </div>
-<div>
-    <p>Add a student</p>
+<h2 style="color: black; font-weight: bold; font-size: 35px; padding-left: 10px;">Student Management</h2>
+<div style="background-color: beige; padding: 10px">
+    <h3>Add a student</h3>
     <form method="post">
         <label for="name1"><b>First Name</b></label>
         <input type="text" placeholder="Enter First name" name="name1" id="name1" required/>
         <label for="name2"><b>Last Name</b></label>
         <input type="text" placeholder="Enter Last name" name="name2" id="name2" required/>
         <label for="login"><b>Login</b></label>
+        <p style="font-size: 15px">Login is an alphanumeric string unique to a specific student within the school.</p>
         <input type="text" placeholder="Enter login" name="login" id="login" required/>
-        <p>Login is an alphanumeric string unique to a specific student within the school.</p>
-        <p>
-            <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" id="psw" required/>
-            <input type="password" placeholder="Confirm Password" name="password2" id="psw2" required/>
-            <button id="reg_btn" type="f">Save student</button>
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="password" id="psw" required/>
+        <input type="password" placeholder="Confirm Password" name="password2" id="psw2" required/>
+        <button id="reg_btn" type="f">Save student</button>
     </form>
 </div>
+<div class = students_container>
+    <h3>Search students</h3>
+    <input id="studentInput" type="text" name="student_search" placeholder="Search student">
+    <div class = students th:each="student: ${students}">
+        <a th:href="@{./student/{id}/student_info(id=${student.student_id})}" th:text="${student.fullname}" th:id="${student.student_id}"><br></a>
+    </div>
+</div>
+
 <script th:inline="javascript">
     function filter(inp) {
         inp.addEventListener("input", function (e) {
@@ -54,5 +59,93 @@
 
     filter(document.getElementById("studentInput"));
 </script>
+<style>
+    .header {
+        overflow: hidden;
+        background-color: #70ca86;
+        padding: 20px 10px;
+        border-radius: 20px;
+    }
+
+    .header a {
+        float: left;
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+    }
+
+    .logo {
+        color: aliceblue;
+        font-size: 45px;
+        font-weight: bold;
+        vertical-align: bottom;
+        display: inline;
+        margin-left: 30px;
+    }
+    .header a:hover {
+        background-color: #c1f1a4;
+        color: black;
+    }
+
+    .header-right {
+        float: right;
+    }
+
+    @media screen and (max-width: 500px) {
+        .header a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+        .header-right {
+            float: none;
+        }
+    }
+    input[type=text], input[type=password]{
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        padding: 10px;
+    }
+
+    button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 5px 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+
+    .students {
+        padding: 15px;
+    }
+    .students a {
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+        background-color: beige;
+    }
+
+    .students a:hover {
+        background-color: #c1f1a4;
+        color: black;
+    }
+
+</style>
 </body>
 </html>
