--- a/src/main/resources/templates/manage_teachers.html
+++ b/src/main/resources/templates/manage_teachers.html
@@ -5,49 +5,138 @@
     <title>Manage Teachers</title>
 </head>
 <body>
-<div id="header">
-    <a class="btn" href="../admin_home">Home</a>
-    <a class="btn" href="/logout" style="float: right">Log out</a>
+<div class="header">
+    <h2 class="logo">Teacherbook</h2>
+    <div class="header-right">
+        <a class="btn" href="../admin_home" style="float: right">Home</a>
+        <a class="btn" href="/logout" style="float: right">Log out</a>
+    </div>
+</div>
+<h2 style="color: black; font-weight: bold; font-size: 35px; padding-left: 10px;">Teacher Management</h2>
+<div class="container-main" style="padding: 25px;">
+    <a href="./teacher_invite"> Invite a new teacher </a></div>
 </div>
 <div class = teachers_container>
     <input id="teacherInput" type="text" name="teacher_search" placeholder="Search teachers">
-    <div class = teachers th:each="teacher: ${teachers}">
-    <p th:text="${teacher.fullname}" th:id="${teacher.teacher_id}"/>
-        <button onclick="delete_confirm(this)">Delete Teacher</button>
+    <div class = "teachers" th:each="teacher: ${teachers}">
+        <p th:text="${teacher.fullname}" th:id="${teacher.teacher_id}"/>
+            <button onclick="delete_confirm(this)">Delete Teacher</button>
     </div>
-    <script th:inline="javascript">
-        function delete_confirm(e) {
-            if (confirm('Are you sure you want to delete this teacher account?')) {
-                var tid = e.parentNode.firstElementChild.getAttribute("id");
-                var url = "./teacher/" + tid + "/delete";
-                window.location.href = url;
-            }
+</div>
+<script th:inline="javascript">
+    function delete_confirm(e) {
+        if (confirm('Are you sure you want to delete this teacher account?')) {
+            var tid = e.parentNode.firstElementChild.getAttribute("id");
+            var url = "./teacher/" + tid + "/delete";
+            window.location.href = url;
         }
+    }
 
-        function filter(inp) {
-            inp.addEventListener("input", function (e) {
-                var val = this.value;
-                var list = document.getElementsByClassName("teachers");
-                if (!val) {
-                    for (var i=0; i<list.length; i++) {
-                        list.item(i).firstElementChild.removeAttribute("hidden");
-                    }
-                }
+    function filter(inp) {
+        inp.addEventListener("input", function (e) {
+            var val = this.value;
+            var list = document.getElementsByClassName("teachers");
+            if (!val) {
                 for (var i=0; i<list.length; i++) {
-                    if (list.item(i).firstElementChild.innerHTML.substr(0, val.length).toUpperCase() != val.toUpperCase()) {
-                        list.item(i).setAttribute("hidden", "true");
-                    } else {
-                        list.item(i).removeAttribute("hidden");
-                    }
+                    list.item(i).firstElementChild.removeAttribute("hidden");
                 }
-            })
-        }
+            }
+            for (var i=0; i<list.length; i++) {
+                if (list.item(i).firstElementChild.innerHTML.substr(0, val.length).toUpperCase() != val.toUpperCase()) {
+                    list.item(i).setAttribute("hidden", "true");
+                } else {
+                    list.item(i).removeAttribute("hidden");
+                }
+            }
+        })
+    }
 
-        filter(document.getElementById("teacherInput"));
-    </script>
-</div>
-<div>
-    <a href="./teacher_invite"> Invite a new teacher </a></div>
-</div>
+    filter(document.getElementById("teacherInput"));
+</script>
+<style>
+    .header {
+        overflow: hidden;
+        background-color: #70ca86;
+        padding: 20px 10px;
+        border-radius: 20px;
+    }
+
+    a {
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+    }
+
+    .container-main a {
+        background-color: #c1f1a4;
+    }
+
+    .logo {
+        color: aliceblue;
+        font-size: 45px;
+        font-weight: bold;
+        vertical-align: bottom;
+        display: inline;
+        margin-left: 30px;
+    }
+
+    .header a:hover {
+        background-color: #c1f1a4;
+        color: black;
+    }
+
+    .header-right {
+        float: right;
+    }
+
+    @media screen and (max-width: 500px) {
+        .header a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+        .header-right {
+            float: none;
+        }
+    }
+
+    input[type=text] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    button {
+        background-color: #AF554C;
+        border: none;
+        color: white;
+        padding: 5px 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+
+    p {
+        padding-top: 15px;
+        padding-left: 15px;
+    }
+
+    .teachers {
+        background-color: beige;
+    }
+
+    tr:hover {
+        background-color: #c1f1a4;
+    }
+</style>
 </body>
 </html>
