--- a/src/main/resources/templates/rotation_rename.html
+++ b/src/main/resources/templates/rotation_rename.html
@@ -5,13 +5,17 @@
     <title>Rotation Day Names</title>
 </head>
 <body>
-<div id="header">
-    <a class="btn" href="../../admin_home">Home</a>
-    <a class="btn" href="/logout" style="float: right">Log out</a>
+<div class="header">
+    <h2 class="logo">Teacherbook</h2>
+    <div class="header-right">
+        <a class="btn" href="../../admin_home">Home</a>
+        <a class="btn" href="/logout">Log out</a>
+    </div>
 </div>
+<h2 style="color: black; font-weight: bold; font-size: 35px; padding: 5px 15px; margin: 0;">Rename Rotation Days</h2>
 <div th:each="calendar: ${calendars}">
-    <div th:each="month: ${calendar.keySet()}">
-        <p><b th:text="${month}"></b></p>
+    <div class="calendar" th:each="month: ${calendar.keySet()}">
+        <h4 th:text="${month}"></h4>
         <table>
             <tr th:each="row: ${calendar.get(month)}">
                 <td th:each="data: ${row}">
@@ -22,11 +26,107 @@
     </div>
 </div>
 <form method="post">
-    <div th:each="day: ${rotation}">
+    <div class="inp_container" th:each="day: ${rotation}">
         <label th:text="${day.name}"></label>
         <input type="text" placeholder="New name" name="dayname" th:id="${day.id}" th:content="${day.name}" />
     </div>
     <button id="submit_btn" type="f">Save</button>
 </form>
+<script inline="javascript">
+    var t = document.getElementsByTagName("tbody");
+    for (var i=0; i < t.length; i++) {
+        t.item(i).firstElementChild.style.backgroundColor = "#70ca86";
+    }
+</script>
+<style>
+    .header {
+        overflow: hidden;
+        background-color: #70ca86;
+        padding: 20px 10px;
+        border-radius: 20px;
+    }
+
+    .header a {
+        float: left;
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+    }
+
+    .logo {
+        color: aliceblue;
+        font-size: 45px;
+        font-weight: bold;
+        vertical-align: bottom;
+        display: inline;
+        margin-left: 30px;
+    }
+    .header a:hover {
+        background-color: #c1f1a4;
+        color: black;
+    }
+
+    .header-right {
+        float: right;
+    }
+
+    @media screen and (max-width: 500px) {
+        .header a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+        .header-right {
+            float: none;
+        }
+    }
+
+    .calendar {
+        padding: 10px;
+        margin: 0 10px;
+    }
+
+    table {
+        border-collapse: collapse;
+    }
+
+    td {
+        border: 1px solid black;
+        padding: 8px;
+    }
+
+    input[type=text] {
+        width: 300px;
+        padding: 12px 20px;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    label {
+        font-weight: bold;
+    }
+
+    .inp_container {
+        padding: 10px;
+    }
+
+    button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+
+</style>
 </body>
 </html>
