--- a/src/main/resources/templates/semester_calendar.html
+++ b/src/main/resources/templates/semester_calendar.html
@@ -5,25 +5,45 @@
     <title>Semester Calendar</title>
 </head>
 <body>
-<div id="header">
-    <a class="btn" href="../../admin_home">Home</a>
-    <a class="btn" href="/logout" style="float: right">Log out</a>
+<div class="header">
+    <h2 class="logo">Teacherbook</h2>
+    <div class="header-right">
+        <a class="btn" href="../../admin_home">Home</a>
+        <a class="btn" href="/logout">Log out</a>
+    </div>
 </div>
-<a href="./rotation_config">Rename Rotation Days</a>
-<a href="./edit_timeslots">Edit Timeslots</a>
+<h2 style="color: black; font-weight: bold; font-size: 35px; padding-left: 10px; margin: 10px 0;">Semester Information</h2>
+<div class="container-main" style="padding: 25px;">
+    <a href="./rotation_config">Rename Rotation Days</a>
+    <a href="./edit_timeslots">Edit Timeslots</a>
+</div>
 <div>
-    <p>Edit schedule for:</p>
     <form method="post" autocomplete="off">
-        <input type="radio" name="for_a" id="group" value="group" onchange="radio_change(this)"/>
-        <label for="group">Group: </label>
-        <input id="groupInput" type="text" name="name" placeholder="Search groups" disabled/>
-        <br/>
-        <input type="radio" name="for_a" id="teacher" value="teacher" onchange="radio_change(this)"/>
-        <label for="teacher">Teacher: </label>
-        <input id="teacherInput" type="text" name="name" placeholder="Search teachers" disabled/>
-        <br/>
+        <h3 style="padding: 0 5px 5px 20px;">Go to schedule for:</h3>
+        <div>
+            <input type="radio" name="for_a" id="group" value="group" onchange="radio_change(this)"/>
+            <label for="group">Group: </label>
+            <input id="groupInput" type="text" name="name" placeholder="Search groups" disabled/>
+        </div>
+        <div>
+            <input type="radio" name="for_a" id="teacher" value="teacher" onchange="radio_change(this)"/>
+            <label for="teacher">Teacher: </label>
+            <input id="teacherInput" type="text" name="name" placeholder="Search teachers" disabled/>
+        </div>
         <button type="f">Go To Schedule</button>
     </form>
+</div>
+<div th:each="calendar: ${calendars}">
+    <div class="calendar" th:each="month: ${calendar.keySet()}">
+        <h4 th:text="${month}"></h4>
+        <table>
+            <tr th:each="row: ${calendar.get(month)}">
+                <td th:each="data: ${row}">
+                    <div style="white-space: pre-line" th:text="${data}"></div>
+                </td>
+            </tr>
+        </table>
+    </div>
 </div>
 <script th:inline="javascript">
 
@@ -61,6 +81,7 @@
                     b.innerHTML = "<strong>" + arr_names[i].substr(0, val.length) + "</strong>";
                     b.innerHTML += arr_names[i].substr(val.length);
                     b.innerHTML += "<input type='hidden' name='group_name' value='" + arr_names[i] + "'/>";
+                    b.classList.add("search_option");
                     b.addEventListener("click", function(e) {
                         this.innerHTML = this.innerHTML.replace("<strong>", "");
                         this.innerHTML = this.innerHTML.replace("</strong>", "");
@@ -118,18 +139,119 @@
     autocomplete(document.getElementById("groupInput"), groupnames);
     var teachernames = [[${teachernames}]];
     autocomplete(document.getElementById("teacherInput"), teachernames);
+    var t = document.getElementsByTagName("tbody");
+    for (var i=0; i < t.length; i++) {
+        t.item(i).firstElementChild.style.backgroundColor = "#70ca86";
+    }
 </script>
-<div th:each="calendar: ${calendars}">
-    <div th:each="month: ${calendar.keySet()}">
-        <p><b th:text="${month}"></b></p>
-        <table>
-            <tr th:each="row: ${calendar.get(month)}">
-                <td th:each="data: ${row}">
-                    <div style="white-space: pre-line" th:text="${data}"></div>
-                </td>
-            </tr>
-        </table>
-    </div>
-</div>
+<style>
+    .header {
+        overflow: hidden;
+        background-color: #70ca86;
+        padding: 20px 10px;
+        border-radius: 20px;
+    }
+
+    .header a {
+        float: left;
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+    }
+
+    .logo {
+        color: aliceblue;
+        font-size: 45px;
+        font-weight: bold;
+        vertical-align: bottom;
+        display: inline;
+        margin-left: 30px;
+    }
+    .header a:hover {
+        background-color: #c1f1a4;
+        color: black;
+    }
+
+    .header-right {
+        float: right;
+    }
+
+    @media screen and (max-width: 500px) {
+        .header a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+        .header-right {
+            float: none;
+        }
+    }
+
+    .container-main a {
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+        background-color: #c1f1a4;
+    }
+
+    form {
+        background-color: beige;
+        padding: 10px;
+    }
+
+    label {
+        font-weight: bold;
+    }
+
+    input[type=text] {
+        width: 300px;
+        padding: 12px 20px;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        margin: 10px 0;
+    }
+
+    input[type=radio] {
+        width: 20px;
+        height: 20px;
+    }
+
+    button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+
+    table {
+        border-collapse: collapse;
+    }
+
+    td {
+        border: 1px solid black;
+        padding: 8px;
+    }
+
+    .search_option {
+        width: fit-content;
+        background-color: #f2de9f;
+        padding: 10px;
+        margin: 10px;
+    }
+</style>
 </body>
 </html>
