--- a/src/main/resources/templates/student_hw.html
+++ b/src/main/resources/templates/student_hw.html
@@ -5,15 +5,18 @@
     <title>My Homework</title>
 </head>
 <body>
-<div id="header">
-    <a class="btn" href="./student_home">Home</a>
-    <a class="btn" href="/logout" style="float: right">Log out</a>
+<div class="header">
+    <h2 class="logo">Teacherbook</h2>
+    <div class="header-right">
+        <a class="btn" href="./student_home">Home</a>
+        <a class="btn" href="/logout">Log out</a>
+    </div>
 </div>
 <h2>My Homework</h2>
 <div th:each="entry: ${homework}">
     <div>
         <h3 th:text="${entry.key.name}" onclick="show_hw(this)"></h3>
-        <div hidden>
+        <div style="display: none; background-color: beige;">
             <div th:each="hw: ${entry.value}">
                 <span th:text="${hw.content}"></span>
                 <span> (Due on: </span>
@@ -26,12 +29,65 @@
 <script>
     function show_hw(e) {
         var content = e.nextElementSibling;
-        if (content.hidden){
-            content.hidden = null;
+        if (content.style.display === "block"){
+            e.style.backgroundColor = "white";
+            content.style.display = "none";
         } else {
-            content.hidden = true;
+            e.style.backgroundColor = "#c1f1a4";
+            content.style.display = "block";
         }
     }
 </script>
+<style>
+    .header {
+        overflow: hidden;
+        background-color: #70ca86;
+        padding: 20px 10px;
+        border-radius: 20px;
+    }
+
+    .header a {
+        float: left;
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+    }
+
+    .logo {
+        color: aliceblue;
+        font-size: 45px;
+        font-weight: bold;
+        vertical-align: bottom;
+        display: inline;
+        margin-left: 30px;
+    }
+    .header a:hover {
+        background-color: #c1f1a4;
+        color: black;
+    }
+
+    .header-right {
+        float: right;
+    }
+
+    @media screen and (max-width: 500px) {
+        .header a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+        .header-right {
+            float: none;
+        }
+    }
+
+    h3:hover {
+        background-color: #c1f1a4;
+    }
+</style>
 </body>
 </html>
